# MpMeV2

./: .gitignore  README.md  main.py  pyproject.toml
frontend/: browser.js  core.js  fetcher.js  main.html
